--- a/index.html
+++ b/index.html
@@ -4,8 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+    
+
+    </style>
+
+
 </head>
 <body>
    <h1>Be Positive</h1> 
-<img src="images/b-positive.jpeg"
+<img src="images/b-positive.jpeg">
 </html>
