--- a/index.html
+++ b/index.html
@@ -1,17 +1,41 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" >
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <style>
-    
-
-    </style>
-
+  <meta charset="UTF-8">
+  <title>First Website</title>
+  <link rel="stylesheet" href="./style.css">
 
 </head>
 <body>
-   <h1>Be Positive</h1> 
-<img src="images/b-positive.jpeg">
+<!-- partial:index.partial.html -->
+<!DOCTYPE html>
+<html lang="en">
+  
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Peyton Oshima - Home</title>
+  <link rel="stylesheet" href="styles.css">
+</head>
+
+<body>
+  <nav>
+    <ul class="navbar">
+      <li><a href="index.html" class="active">Home</a></li>
+      <li><a href="about.html">About</a></li>
+      <li><a href="season.html">Season</a></li>
+      <li><a href="partners.html">Partners</a></li>
+    </ul>
+  </nav>
+
+  <main>
+    <h1>Welcome to Peyton Oshima's Official Site</h1>
+    <p>This is the homepage of the site.</p>
+  </main>
+</body>
+
+</html>
+<!-- partial -->
+  
+</body>
 </html>
